{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 161,
  "lineage": "e853c101-211d-9757-1128-6ee661663e2a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180693256225:internet-gateway/igw-01790f73b5ddf5f95",
            "id": "igw-01790f73b5ddf5f95",
            "owner_id": "180693256225",
            "tags": {
              "Name": "Project VPC IG"
            },
            "tags_all": {
              "Name": "Project VPC IG"
            },
            "vpc_id": "vpc-0e8c8a8f0d8cea4bd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180693256225:route-table/rtb-0658ee4e6c94351d7",
            "id": "rtb-0658ee4e6c94351d7",
            "owner_id": "180693256225",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01790f73b5ddf5f95",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public subnets Route Table"
            },
            "tags_all": {
              "Name": "Public subnets Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8c8a8f0d8cea4bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00479f74b9a262910",
            "route_table_id": "rtb-0658ee4e6c94351d7",
            "subnet_id": "subnet-00f60ad8a32d819ef"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9cbcb7398fb0c0b",
            "route_table_id": "rtb-0658ee4e6c94351d7",
            "subnet_id": "subnet-0097cfb7e42543ff8"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "userapi_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180693256225:security-group/sg-0179e6baec0c8eb63",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0179e6baec0c8eb63",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "userApi-server-sg",
            "name_prefix": "",
            "owner_id": "180693256225",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e8c8a8f0d8cea4bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180693256225:subnet/subnet-068f9cb523ecea259",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.11.128.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068f9cb523ecea259",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180693256225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-0e8c8a8f0d8cea4bd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180693256225:subnet/subnet-0115c71dcf134c653",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.11.144.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0115c71dcf134c653",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180693256225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-0e8c8a8f0d8cea4bd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180693256225:subnet/subnet-00f60ad8a32d819ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.11.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f60ad8a32d819ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180693256225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-0e8c8a8f0d8cea4bd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180693256225:subnet/subnet-0097cfb7e42543ff8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.11.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0097cfb7e42543ff8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180693256225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-0e8c8a8f0d8cea4bd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180693256225:vpc/vpc-0e8c8a8f0d8cea4bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-004ce07d6e220a6f1",
            "default_route_table_id": "rtb-078d47e95090dc320",
            "default_security_group_id": "sg-001c60d58ea7da5e2",
            "dhcp_options_id": "dopt-0953aede614b45b86",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e8c8a8f0d8cea4bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-078d47e95090dc320",
            "owner_id": "180693256225"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "gateway_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180693256225:vpc-endpoint/vpce-0ca96f4c68c12545d",
            "cidr_blocks": [
              "35.71.109.0/25",
              "52.94.6.0/24",
              "35.71.109.128/26"
            ],
            "id": "vpce-0ca96f4c68c12545d",
            "owner_id": "180693256225",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-48a54021",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.ap-northeast-2.dynamodb",
            "state": "available",
            "tags": {
              "Environment": "test",
              "Name": "dynamodb endpoint"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "dynamodb endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0e8c8a8f0d8cea4bd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180693256225:vpc-endpoint/vpce-00982d1a2109b6cb2",
            "cidr_blocks": [
              "52.219.202.0/23",
              "52.219.144.0/22",
              "52.219.204.0/22",
              "3.5.144.0/23",
              "3.5.140.0/22",
              "52.219.148.0/23",
              "52.219.60.0/23",
              "52.219.56.0/22"
            ],
            "id": "vpce-00982d1a2109b6cb2",
            "owner_id": "180693256225",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.ap-northeast-2.s3",
            "state": "available",
            "tags": {
              "Environment": "test",
              "Name": "s3 endpoint"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "s3 endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0e8c8a8f0d8cea4bd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interface_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180693256225:vpc-endpoint/vpce-0f8b768dd3bad0449",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0f8b768dd3bad0449",
            "ip_address_type": "ipv4",
            "owner_id": "180693256225",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-001c60d58ea7da5e2"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecr.dkr",
            "state": "available",
            "tags": {
              "Environment": "test",
              "Name": "ecr.dkr endpoint"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "ecr.dkr endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e8c8a8f0d8cea4bd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180693256225:vpc-endpoint/vpce-0a63464e861015240",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0a63464e861015240",
            "ip_address_type": "ipv4",
            "owner_id": "180693256225",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-001c60d58ea7da5e2"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecr.api",
            "state": "available",
            "tags": {
              "Environment": "test",
              "Name": "ecr.api endpoint"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "ecr.api endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e8c8a8f0d8cea4bd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180693256225:vpc-endpoint/vpce-01ef71ebdc251cade",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-01ef71ebdc251cade",
            "ip_address_type": "ipv4",
            "owner_id": "180693256225",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-001c60d58ea7da5e2"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.logs",
            "state": "available",
            "tags": {
              "Environment": "test",
              "Name": "logs endpoint"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "logs endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e8c8a8f0d8cea4bd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180693256225:vpc-endpoint/vpce-0595b6f353e1cea17",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0595b6f353e1cea17",
            "ip_address_type": "ipv4",
            "owner_id": "180693256225",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-001c60d58ea7da5e2"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.sqs",
            "state": "available",
            "tags": {
              "Environment": "test",
              "Name": "sqs endpoint"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "sqs endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e8c8a8f0d8cea4bd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}